# kusogaki-bot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  \  config.py  fly.toml  main.py  pyproject.toml  railway.toml  requirements.txt  response.json  ruff.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yaml  request.yaml
.github/workflows/: ci-failure.yml  ci.yml  deploy.yml  release.yml
cogs/: general.py  gta.py  poll.py  suggestion.py
data/: food_counter.json
docs/: CONTRIBUTING.md  CONTRIBUTING_DEV.md
docs/ADRS/: 0002-restructure-project.md
docs/adrs/: 0001-gta-quiz.md  0002-restructure-project.md
kusogaki_bot/: bot.py
kusogaki_bot/cogs/: awaiz_food.py  general.py  gta_quiz.py  help.py  poll.py  reminders.py  scheduled_threads.py
kusogaki_bot/core/: __init__.py  base_cog.py  bot.py  db.py  exceptions.py
kusogaki_bot/data/: db.py  food_counter_repository.py  models.py  redis_db.py  reminder_repository.py  scheduled_thread_repository.py
kusogaki_bot/features/aniwrap/: cog.py  data.py  fetch_data.py  query.py  service.py  task_manager.py
kusogaki_bot/features/development/: cog.py  service.py
kusogaki_bot/features/food_tracker/: cog.py  data.py  service.py
kusogaki_bot/features/guess_the_anime/: cog.py  data.py  service.py
kusogaki_bot/features/help/: cog.py  data.py  service.py
kusogaki_bot/features/mainwrap/: cog.py  data.py  replacemedia.py  service.py  task_manager.py
kusogaki_bot/features/miku/: cog.py
kusogaki_bot/features/miniwrap/: cog.py  data.py  fetch_data.py  service.py  task_manager.py
kusogaki_bot/features/ping/: cog.py
kusogaki_bot/features/poll/: cog.py  service.py
kusogaki_bot/features/recommendation/: cog.py  data.py  service.py
kusogaki_bot/features/reload/: cog.py
kusogaki_bot/models/: anilist_config.py  events.py  food_counter.py  game_config.py  game_state.py  help_views.py  round_data.py
kusogaki_bot/services/: anilist_service.py  event_manager.py  food_counter_service.py  game_manager.py  game_message_service.py  gta_quiz_service.py  help_service.py  message_service.py  player_service.py  poll_service.py  quiz_round_service.py  reminder_service.py  scheduled_thread_service.py
kusogaki_bot/shared/: __init__.py
kusogaki_bot/utils/: base_cog.py  embeds.py  permissions.py
scripts/: ruff.py
utils/: general.py  gta.py
views/: scroller.py
(+16 files in other folders)
