[project]
name = "kusogaki-bot"
version = "0.5.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "audioop-lts>=0.2.1",
    "deptry>=0.23.0",
    "discord-py>=2.4.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.37",
    "watchdog>=6.0.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "ruff>=0.9.4",
]

[tool.ruff.format]
quote-style = "single"
line-ending = "auto"

[tool.ruff.lint]
select = ["F", "E", "I"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["kusogaki-bot"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
combine-as-imports = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.deptry]
ignore = ["DEP001", "DEP003"]

[tool.deptry.per_rule_ignores]
DEP002 = ["psycopg2-binary"]
